# nu-esports-bot

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  bot.py  compose.yaml  config.example.yaml  config.py  pyproject.toml  requirements.txt  secrets.example.yaml  statuses.yaml
.claude/: settings.local.json
.github/workflows/: black.yml
cogs/: banana.py  connections.py  fun.py  game.py  gameroom.py  groupme.py  leaderboard.py  matchmaking.py  moderation.py  pcs.py  points.py  presence.py  profile.py  pugs.py  teams.py  valorant.py
data/: gameroom.yaml  matchmaking.yaml
data/games/: deadlock.yaml  league.yaml  overwatch.yaml  valorant.yaml
postgres/: Dockerfile  init-tables.sql
postgres/migrations/: 001_baseline.sql  002_bot_state.sql  003_profiles.sql
utils/: config.py  db.py  elo.py  migrate.py  statuses.py
